--- a/tachyons.css
+++ b/tachyons.css
@@ -1917,7 +1917,8 @@ code, .code { font-family: Consolas, monaco, monospace; }
  * even if you are using background-size: cover */
  /* removed -webkit-backface-visibility: hidden; backface-visibility: hidden; */
 .grow { -moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: antialiased; -webkit-filter: blur(0); -webkit-transform: translateZ( 0 ); transform: translateZ( 0 ); transition: -webkit-transform .25s ease-out; transition: transform .25s ease-out; transition: transform .25s ease-out, -webkit-transform .25s ease-out; }
-.grow:hover, .grow:focus { -webkit-transform: scale( 1.05 ); transform: scale( 1.05 ); filter: blur(0); -webkit-filter: blur(0); }
+.grow:hover, .grow:focus { -webkit-transform: scale( 1.025 ); transform: scale( 1.025 ); filter: blur(0); -webkit-filter: blur(0); }
+/* scale 1.05 originally */
 .grow:active { -webkit-transform: perspective(1px) scale( .90 ); transform: perspective(1px) scale( .90 ); }
 .grow-large { -moz-osx-font-smoothing: grayscale; -webkit-backface-visibility: hidden; backface-visibility: hidden; -webkit-transform: translateZ( 0 ); transform: translateZ( 0 ); transition: -webkit-transform .25s ease-in-out; transition: transform .25s ease-in-out; transition: transform .25s ease-in-out, -webkit-transform .25s ease-in-out; }
 .grow-large:hover, .grow-large:focus { -webkit-transform: scale( 1.2 ); transform: scale( 1.2 ); }
