--- a/test-site/style.css
+++ b/test-site/style.css
@@ -41,11 +41,15 @@ body {
 }
 @media screen and (max-width: 36em) {
   .nav {
-    margin-top: -0.6rem;
-    margin-bottom: -1rem;
+    margin-top: -1rem;
+    margin-bottom: -1.6rem;
   }
   .contact {
     font-size: 1.8rem;
+  }
+  .new-logo {
+    max-width: 16rem;
+    padding-top: .4rem
   }
 }
 @media screen and (min-width: 55.1em) {
@@ -55,4 +59,8 @@ body {
 }
 .bg-light-gray {
   background-color: rgba(250, 250, 250, 1)
+}
+.new-logo {
+  margin-top:-.55rem;
+  width: 20rem;
 }
